kubernetes/openwebui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:main
          imagePullPolicy: Always 
          ports:
            - containerPort: 3000
            - containerPort: 8080
          volumeMounts:
            - name: webui-storage
              mountPath: /app/data
      volumes:
        - name: webui-storage
          persistentVolumeClaim:
            claimName: webui-pvc
