kubernetes/influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: abdullah122/influxdb-custom:latest
          ports:
            - containerPort: 8086
          volumeMounts:
            - name: influxdb-storage
              mountPath: /var/lib/influxdb2
      volumes:
        - name: influxdb-storage
          persistentVolumeClaim:
            claimName: influxdb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  type: NodePort
  ports:
    - port: 8086
      targetPort: 8086
      nodePort: 30086
  selector:
    app: influxdb
